--- a/app.yaml
+++ b/app.yaml
@@ -10,7 +10,7 @@ handlers:
   static_files: www/\1
   upload: www/(.*)
 
-- url: /(.*)
+- url: /.*
   secure: always
   redirect_http_response_code: 301
   script: auto
